# Chocolates-Website-scraper

./: main.py  pyproject.toml
chocolatescraper/: chocolates.csv  chocolates.json  chocolatesLoader.json  chocs.xml
chocolatescraper/chocolatesD/chocolatespider/: chocolatespider_2026-03-22T21-40-20+00-00_batch_1.csv  chocolatespider_2026-03-22T21-40-24+00-00_batch_2.csv  chocolatespider_2026-03-22T21-40-24+00-00_batch_3.csv  chocolatespider_2026-03-22T21-40-27+00-00_batch_4.csv  chocolatespider_2026-03-22T21-40-27+00-00_batch_5.csv  chocolatespider_2026-03-22T21-40-32+00-00_batch_6.csv  chocolatespider_2026-03-22T21-40-32+00-00_batch_7.csv
chocolatescraper/chocolates_data/chocolatespider/: chocolatespider_2026-03-22T21-30-17+00-00.csv
chocolatescraper/chocolatescraper/: itemloaders.py  items.py  middlewares.py  pipelines.py  pplte.py  settings.py
chocolatescraper/chocolatescraper/spiders/: AWSBUCKET.txt  chocolatespider.py
scrapyAmazonProducts/basic-scrapy-project/basic_scrapy_spider/: settings.py
scrapyIndeed/basic-scrapy-project/basic_scrapy_spider/: settings.py
scrapyIndeed/basic-scrapy-project/data/: indeed_jobs_2026-03-28T20-06-57+00-00.csv
scrapyLinkedInCompanies/basic-scrapy-project/basic_scrapy_spider/: settings.py
scrapyLinkedin/basic-scrapy-project/basic_scrapy_spider/: settings.py
scrapyLinkedin/basic-scrapy-project/data/: linkedIn_people_profile_2026-03-30T17-04-47+00-00.csv  linkedIn_people_profile_2026-03-31T12-47-46+00-00.csv  (+1 more)
scrapyRedis/scaling-python-scrapy-redis/: add-urls-to-redis.py  quotes.json  quotes2.json
(+8 files in other folders)
